fix(UserService): fix user response mapping
— Change collect(Collectors.toList()) to toList() for better readability and
  performance.